# RL_2048

./: .gitignore  CMakeLists.txt  README.md  rl.ipynb
.ipynb_checkpoints/: rl-checkpoint.ipynb
env/: 2048_game.cpp  bindings.cpp  test.py
